--- a/KnowledgeSystemWEB/src/app/account-management/account-management.component.html
+++ b/KnowledgeSystemWEB/src/app/account-management/account-management.component.html
@@ -1,1 +1,3 @@
-<p>account-management works!</p>
+<div class = "container border border-light rounded col-4">
+    <app-log-in></app-log-in>
+</div>
