--- a/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
+++ b/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
@@ -1,1 +1,13 @@
-
+<form action="">
+    <div class="form-group">
+        <label for="">Email address</label>
+        <input class ="form-control form-control-lg" type="email" placeholder="Enter email"> 
+    </div>
+    <div class="form-group">
+        <label for="">Password</label>
+        <input class ="form-control form-control-lg" type="password" placeholder="Enter password">
+    </div>
+    <div class="form-group">
+        <button class="btn btn-info btn-lg btn-block" type="submit">SUBMIT</button>
+    </div>
+</form>
