--- a/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
+++ b/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
@@ -1,13 +1,23 @@
-<form action="">
-    <div class="form-group">
-        <label for="">Email address</label>
-        <input class ="form-control form-control-lg" type="email" placeholder="Enter email"> 
+<div id = "middle_centered">
+    <p class="lead text-center">
+        Log in please
+    </p>
+    <div class = "container col-3 border bg-light rounded">
+        <form #form="ngForm" (ngSubmit)="login(form)">
+                <div *ngIf="invalidLogin" class = "alert alert-danger">
+                            Invalid username or password
+                 </div>
+                 <div class="form-group">
+                    <label for="">Email address</label>
+                    <input class ="form-control" name = "email" [(ngModel)]="user.email" type="email" placeholder="Enter email" required> 
+                 </div>
+                <div class="form-group">
+                    <label for="">Password</label>
+                    <input class ="form-control" name = "password" [(ngModel)]="user.password" type="password" placeholder="Enter password" required>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-info btn-block" type="submit">SUBMIT</button>
+                </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="">Password</label>
-        <input class ="form-control form-control-lg" type="password" placeholder="Enter password">
-    </div>
-    <div class="form-group">
-        <button class="btn btn-info btn-lg btn-block" type="submit">SUBMIT</button>
-    </div>
-</form>
+</div>
