--- a/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
+++ b/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
@@ -16,7 +16,10 @@
                     <input class ="form-control" name = "password" [(ngModel)]="user.password" type="password" placeholder="Enter password" required>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-info btn-block" type="submit">SUBMIT</button>
+                    <button class="btn btn-info btn-block" type="submit" [disabled] = "form.invalid">SUBMIT</button>
+                </div>
+                <div class="form-group"> 
+                    <a class="text-muted" href="/signup">Sign Up</a>
                 </div>
         </form>
     </div>
