--- a/KnowledgeSystemWEB/src/app/home/home.component.html
+++ b/KnowledgeSystemWEB/src/app/home/home.component.html
@@ -1,12 +1,33 @@
-<div class = "container row">
-    <p class = "font-weight-light">Hello {{user.name}}</p>
-    <a href="" (click) = "logout()" class="bi bi-box-arrow-left"></a>
+<div class = "cont">
+    <div class = "left">
+        <h4 class = "font-weight-light">Hello {{user.name}}</h4>
+    </div>
+    <div class = "center">
+        <i class="bi bi-dot text-danger"></i>
+        <span class = "font-weight-light">Novice</span>
+        <i class="bi bi-dot text-warning"></i>
+        <span class = "font-weight-light">Intermediate</span>
+        <i class="bi bi-dot text-success"></i>
+        <span class = "font-weight-light">Advanced</span>
+    </div>    
+    <div class = "right">
+        <span class = "text-dark">Log out</span>
+        <a href="" (click) = "logout()" class="bi bi-box-arrow-left text-info"></a>
+    </div>
 </div>
 
-<div>
-    <li *ngFor="let technology of technologies">
-      <p>{{technology.groupTitle}}</p>
-      <p>{{technology.title}}</p>
-      <p>{{technology.level}}</p>   
-    </li>
+
+<div class = "container">
+    <div class = grid>
+        <div *ngFor="let technology in techonologies" class = "border border-light">
+                <p class ="text-info text-center">{{technology.groupTitle}}</p>
+                <hr>
+                <div class = "bg-light container_technology">
+                    <p>{{technology.title}}</p>
+                    <i *ngIf="technology.level=='Novice'" class="bi bi-dot text-danger"></i>
+                    <i *ngIf="technology.level=='Intermediate'" class="bi bi-dot text-warning"></i>
+                    <i *ngIf="technology.level=='Advanced'" class="bi bi-dot text-success"></i>
+                </div>
+        <div>   
+    </div>
 </div>
