--- a/KnowledgeSystemWEB/src/app/home/home.component.html
+++ b/KnowledgeSystemWEB/src/app/home/home.component.html
@@ -19,7 +19,7 @@
 
 <div class = "container">
     <div class = grid>
-        <div *ngFor="let technology in techonologies" class = "border border-light">
+        <div *ngFor="let technology of technologies" class = "border border-light">
                 <p class ="text-info text-center">{{technology.groupTitle}}</p>
                 <hr>
                 <div class = "bg-light container_technology">
