--- a/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
+++ b/KnowledgeSystemWEB/src/app/account-management/log-in/log-in.component.html
@@ -1,12 +1,10 @@
+<notifier-container></notifier-container>
 <div id = "middle_centered">
     <p class="lead text-center">
         Log in please
     </p>
     <div class = "container col-3 border bg-light rounded">
         <form #form="ngForm" (ngSubmit)="login(form)">
-                <div *ngIf="invalidLogin" class = "alert alert-danger">
-                            Invalid username or password
-                 </div>
                  <div class="form-group">
                     <label for="">Email address</label>
                     <input class ="form-control" name = "email" [(ngModel)]="user.email" type="email" placeholder="Enter email" required> 
