Structured client side & refactor server side

--- a/KnowledgeSystemWEB/src/app/home/home.component.html
+++ b/KnowledgeSystemWEB/src/app/home/home.component.html
@@ -1,12 +1,9 @@
+<notifier-container></notifier-container>
 <div class = "cont">
     <div class = "center">
         <button type="button" class="btn btn-info mr-2">Edit skills</button>
         <button type="button" class="btn btn-info" (click) = "onProfileClick()">Edit profile</button>
     </div>    
-    <div class = "right">
-        <span class = "text-dark">Log out</span>
-        <a href="" (click) = "logout()" class="bi bi-box-arrow-left text-info"></a>
-    </div>
 </div>
 
 <div class = "container-fluid mt-3">
